[package]
name = "canparse"
version = "0.1.7"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
description = "A CAN signal and definition parser"
repository = "https://github.com/jmagnuson/canparse"
documentation = "https://docs.rs/canparse"
readme = "README.md"
keywords = ["can", "socketcan", "j1939", "dbc", "parser"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "canparse"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3"
encoding = "0.2"
enum_primitive = "0.1"
nom = "4.2"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.6.0"
lazy_static = "1.3"